Enhance dark theme support by ensuring all relevant elements toggle correctly; update styles for code and header-right in dark mode

--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,14 @@ body.dark-theme {
     color: #ffffff;
 }
 
+body.dark-theme code {
+    color: #333333;
+}
+
+body code {
+    font-size: 1.2em;
+}
+
 /* Header Styles */
 .header {
     position: fixed;
@@ -54,6 +62,10 @@ body.dark-theme {
     background-color: #222222;
 }
 
+.sidebar.dark-theme nav .nav-group {
+    color:#ffffff;
+}
+
 .nav-group {
     margin-bottom: 20px;
 }
@@ -81,6 +93,10 @@ body.dark-theme {
 .nav-link.active {
     background: #007bff;
     color: #fff;
+}
+
+.header-right.dark-mode a{
+    background-color: #ffffff;
 }
 
 /* Main Content Styles */
